Prevent flickering when hovering near rc-slider tooltips.

--- a/meteor-app/client/main.less
+++ b/meteor-app/client/main.less
@@ -114,3 +114,8 @@ a {
 @import '{}/imports/ui/styling/pages/not-found';
 @import '{}/imports/ui/styling/pages/home';
 @import '{}/imports/ui/styling/pages/model-paleocar';
+
+// Prevent rc-slider tooltip from flickering.
+.rc-slider-tooltip {
+  pointer-events: none;
+}
